# phone-sets

./: .gitignore  .kdev_include_paths  CMakeLists.txt  README.md  phone-sets.kdev4  phone.kdev4  queries.qrc
.kdev4/: phone.kdev4
enc/: encoding_utils.cpp  encoding_utils.h
filetree/: filetree.cpp  filetree.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  xmlsyntaxhighlighter.cpp  xmlsyntaxhighlighter.h
filetree/queries/: listTXTFiles.xq
load/: в_Москве_купить_квартиру_13-12-12_11-09-48.txt
proc/: load_input_file.cpp  load_input_file.h  phone_table_model.cpp  phone_table_model.h  save_output_file.cpp  save_output_file.h
save/: black_list.txt
src/: phone.cpp  phone.h  settings.cpp  settings.h
